--- a/secrets.yaml
+++ b/secrets.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: erp
 type: Opaque
 data:
-  mysql-root-password: ${MYSQL_ROOT_PASSWORD} #  Base64 encoded
-  admin-password: ${ADMIN_PASSWORD} # Base64 encoded
+  mysql-root-password: "cGFzc3dvcmQ="
+  admin-password: "cGFzc3dvcmQ="
