--- a/deployments/backend-deployment.yaml
+++ b/deployments/backend-deployment.yaml
@@ -13,12 +13,19 @@ spec:
       labels:
         app: backend
     spec:
+      restartPolicy: Always
       containers:
         - name: backend
           image: frappe/erpnext-worker:${SOFTWARE_VERSION_TAG}
-          restartPolicy: Always
           volumeMounts:
             - name: sites-volume
               mountPath: /home/frappe/frappe-bench/sites
             - name: assets-volume
               mountPath: /home/frappe/frappe-bench/sites/assets
+      volumes:
+        - name: sites-volume
+          persistentVolumeClaim:
+            claimName: sites-pvc
+        - name: assets-volume
+          persistentVolumeClaim:
+            claimName: assets-pvc
