--- a/deployments/configurator-deployment.yaml
+++ b/deployments/configurator-deployment.yaml
@@ -51,3 +51,7 @@ spec:
           volumeMounts:
             - name: sites-volume
               mountPath: /home/frappe/frappe-bench/sites
+      volumes:
+        - name: sites-volume
+          persistentVolumeClaim:
+            claimName: sites-pvc
