--- a/deployments/configurator-deployment.yaml
+++ b/deployments/configurator-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: configurator
-          image: frappe/erpnext-worker:${SOFTWARE_VERSION_TAG}
+          image: frappe/erpnext-worker:latest
           command: ["python", "configure.py"]
           env:
             - name: DB_HOST
