--- a/deployments/scheduler-deployment.yaml
+++ b/deployments/scheduler-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       restartPolicy: Always
       containers:
         - name: scheduler
-          image: frappe/erpnext-worker:${SOFTWARE_VERSION_TAG}
+          image: frappe/erpnext-worker:latest
           command: ["bench", "schedule"]
           volumeMounts:
             - name: sites-volume
