--- a/deployments/frontend-deployment.yaml
+++ b/deployments/frontend-deployment.yaml
@@ -13,7 +13,7 @@ spec:
       labels:
         app: frontend
     spec:
-      restartPolicy: OnFailure
+      restartPolicy: Always
       containers:
         - name: frontend
           image: frappe/erpnext-nginx:latest
