--- a/services/backend-service.yaml
+++ b/services/backend-service.yaml
@@ -8,6 +8,6 @@ spec:
     app: backend
   ports:
     - protocol: TCP
-      port: 8000 # Adjust if the backend exposes a different port
-      targetPort: 8000 # Adjust if the backend listens on a different port
-  clusterIP: ClusterIP
+      port: 8000
+      targetPort: 8000
+  type: ClusterIP
