--- a/pvcs/redis-socketio-data-pv.yaml
+++ b/pvcs/redis-socketio-data-pv.yaml
@@ -12,4 +12,4 @@ spec:
   storageClassName:  my-nfs-storage
   hostPath:
     path: /mnt/erp/redis-socketio-data
-    type: Directory
+    # type: Directory
