--- a/deployments/create-site-job.yaml
+++ b/deployments/create-site-job.yaml
@@ -33,32 +33,32 @@ spec:
                   key: admin-password
             - name: DB_HOST
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: erpnext-configs
                   key: db-host
             - name: DB_PORT
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: erpnext-configs
                   key: db-port
             - name: REDIS_CACHE
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: erpnext-configs
                   key: redis-cache
             - name: REDIS_QUEUE
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: erpnext-configs
                   key: redis-queue
             - name: REDIS_SOCKETIO
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: erpnext-configs
                   key: redis-socket
             - name: SOCKETIO_PORT
               valueFrom:
-                secretKeyRef:
+                configMapKeyRef:
                   name: erpnext-configs
                   key: socket-port
           volumeMounts:
