--- a/deployments/db-deployment.yaml
+++ b/deployments/db-deployment.yaml
@@ -18,6 +18,7 @@ spec:
         - name: db
           image: mariadb:10.6
           command:
+            - "mariadbd"  # The MariaDB server executable
             - "--character-set-server=utf8mb4"
             - "--collation-server=utf8mb4_unicode_ci"
             - "--skip-character-set-client-handshake"
